--- a/src/ClassicUO.csproj
+++ b/src/ClassicUO.csproj
@@ -210,6 +210,7 @@
     <Compile Include="Network\Encryption\Encryption.cs" />
     <Compile Include="Network\Encryption\LoginCryptBehaviour.cs" />
     <Compile Include="Network\Encryption\TwofishBehaviour.cs" />
+    <Compile Include="Network\SanctuaryPacketHandlers.cs" />
     <Compile Include="Renderer\MatrixEffect.cs" />
     <Compile Include="Time.cs" />
     <Compile Include="Utility\Collections\RawList.cs" />
