--- a/src/ClassicUO.csproj
+++ b/src/ClassicUO.csproj
@@ -132,6 +132,7 @@
     <Compile Include="Game\Data\PromptData.cs" />
     <Compile Include="Game\Data\RaceType.cs" />
     <Compile Include="Game\Data\SpellsEvocation.cs" />
+    <Compile Include="Game\Data\SpellsIntonation.cs" />
     <Compile Include="Game\Data\Waypoints.cs" />
     <Compile Include="Game\Managers\ActiveIconsManager.cs" />
     <Compile Include="Game\Managers\BoatMovingManager.cs" />
